syntax = "proto3";

option csharp_namespace = "server";

package usercredentials;

// The greeting service definition.
service UserCredentialSender{
  // Sends a greeting
  rpc SendUserCredentials (UserCredentials) returns (Reply);
}

// The request message containing the user's name.
message UserCredentials{
  string username = 1;
  string password = 2;
  string action = 3;
}

// The response message containing the greetings.
message Reply{
  bool message = 1;
}
